# English-Learning

./: .cursorrules  .dockerignore  .env.example  .gitignore  Makefile  README.md  README_VI.md  SETUP_EMAIL_OAUTH.md  SETUP_GUIDE_VI.md  SOCKET_IO_REVIEW.md  SOCKET_IO_TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  prisma.config.ts  tsconfig.json  tsconfig.tsbuildinfo
crawler-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dy  pyproject.toml
crawler-service/config/: __init__.py  settings.py  sources.py
crawler-service/docs/: INTEGRATION.md
crawler-service/src/: __init__.py  main.py
crawler-service/src/adapters/: __init__.py
crawler-service/src/adapters/http/: __init__.py  async_client.py
crawler-service/src/adapters/parsers/: __init__.py  html_parser.py
crawler-service/src/adapters/storage/: __init__.py  api_client.py
crawler-service/src/extractors/: __init__.py  base_extractor.py
crawler-service/src/extractors/grammar/: __init__.py  grammar_extractor.py
crawler-service/src/extractors/vocabulary/: __init__.py  free_dict_api_extractor.py  free_dict_extractor.py  oxford_extractor.py  wiktionary_extractor.py
crawler-service/src/models/: __init__.py  crawl.py  vocabulary.py
crawler-service/src/pipelines/: __init__.py  grammar_pipeline.py  vocabulary_pipeline.py
crawler-service/src/services/: __init__.py  crawler_service.py  file_storage.py
crawler-service/tests/: conftest.py
crawler-service/tests/extractors/: test_vocabulary.py
crawler-service/tests/services/: test_grammar.py
docs/: PROJECT_REVIEW_AND_NEXT_STEPS_NO_AI.md  analytics.md  api-contracts.md  authentication_architecture_jwt_session_security_vi.md  (+17 more)
(+318 files in other folders)
