[project]
name = "english-learning-crawler"
version = "1.0.0"
description = "Crawler service for English Learning Platform"
authors = [{name = "Dev Team"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx[http2]==0.27.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.1",
    "playwright==1.49.0",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "tenacity==8.2.3",
    "structlog==24.1.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.27.1",
    "fastapi==0.110.0",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
    "orjson==3.9.15",
    "httpx-sse==0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.3.2",
    "mypy==1.9.0",
    "pre-commit==3.6.2",
]

[project.scripts]
crawler = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
